# PixelAir

./: .gitignore  CMakeLists.txt  Info.plist  Main.qml  main.cpp  resources.qrc
macos/windowHelper/: MacOSWindowHelper.h  MacOSWindowHelper.mm
qml/: Main.qml
src/: main.cpp
src/controllers/: canvascontroller.cpp  canvascontroller.h
src/models/: avltree.cpp  avltree.h  rasterlayer.cpp  rasterlayer.h
src/views/: canvasrenderer.cpp  canvasrenderer.h
src/views/shaders/: gradientshader.cpp  gradientshader.frag  gradientshader.frag.qsb  gradientshader.vert
src/views/shaders/gradient/: gradientshader.frag  gradientshader.frag.qsb  gradientshader.h  gradientshader.vert.qsb
tests/: tst_avltree.cpp  tst_rasterlayer.cpp
